@@ -4,9 +4,11 @@
     FIXED - KILO was ignored when processing %k in special tokens
     FIXED - fixed up comments in dbplug datasource plugin to match reality
     FIXED - nowarn_WMxxxx actually works!
+    FIXED - rounding error 'kinks' in angled VIA links
     CHANGE - command-line weathermap has new --no-warn option to disable warnings
     CHANGE - new config parser is much faster than the previous one
     CHANGE - other performance improvements - possibly twice as quick as 0.97c (thanks to ikorzha758 for lots of feedback)
+    CHANGE - (Cacti plugin only) images are written to a temporary file first, to avoid displaying half-written images
     ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically enabled in Cacti)
     ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
     ADDED - AICONFILLCOLOR accepts 'none' for drawing giant transparent shapes.
